   - Image output didn't correctly horizontally align the "no data available"
     message in 5 minute graph depending on the width of the image
   - Image output related configuration warnings could get shown when image
     output wasn't being used
   - Warnings of mismatches between image output and data retention
     configuration didn't provide relevant details for solving the issues
 - New
   - Add the possibility of specifying an interface without using the
     -i / --iface options (vnstat and vnstati)
   - Add configuration option UseUTC for using UTC as timezone for database
     entries instead of following the system timezone configuration
   - Image output example cgi (examples/vnstat.cgi) automatically lists
     all monitored interfaces instead of requiring the list to be filled
     manually, server name in page title comes from hostname command
   - Image output example cgi (examples/vnstat.cgi) provides links for most
     available images to more detailed or longer versions of each image
   - Image output example cgi (examples/vnstat.cgi) allows direct interface
     specific page access with /interfacename suffix for the cgi if the
     used httpd supports PATH_INFO
   - Image output uses LibGD filled arc bug workaround only for LibGD
     versions that are known to be broken


2.7 / 16-May-2021

 - Fixed
   - Possibility of segmentation fault with image list output when database
     existed but no data was available
   - ./configure output could show invalid install paths with some parameter
     combinations (pull request by Severin Glöckner)
   - Columns in text hours graph output could get misaligned if the selected
     system locale used a UTF-8 sequence for the thousands separator instead
     of a single character
 - New
   - Add -5g / --fivegraph options to image output with sizing related
     parameters for the output of a 5 minute resolution bar graph
   - Add configuration option SummaryGraph and optional parameter for